# tutorials

./: README.md
Classification/: telco.csv
DialoGPT chatbot/: config.yaml  service.yaml
DialoGPT chatbot/backend/: Dockerfile  app.py  docker_command to start.txt  load_model.py  model.py  requirements.txt
DialoGPT chatbot/frontend/: Dockerfile  package-lock.json  package.json
DialoGPT chatbot/frontend/public/: index.html
DialoGPT chatbot/frontend/src/: index.js
InterviewExample/: Vodafone.ipynb  telco.csv
LLM translation with monitoring/: .env_azure_oai  .env_oai  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  prompt_utils.py  requirements.txt  translated_output.csv  translated_output_googletranslate.csv  translator_app.py
LLM translation with monitoring/config/: Dockerfile  docker-compose.yml
LLM translation with monitoring/data/: sample_googletranslate.csv
LLM translation with monitoring/dotenv templates/: dotenv_azure_oai  dotenv_oai
LLM translation with monitoring/src/: prompt_utils.py  translator_app.py
MNDWRK webinar/: MNDWRK tutorial.ipynb
Transfer Learning/: Transfer Learning.html  Transfer Learning.ipynb
mImwzfqeMh/: .env.example  .gitignore  README.md  pyproject.toml  weather.db
mImwzfqeMh/app/: database.py  main.py  models.py  schemas.py  stats.py
mImwzfqeMh/scripts/: seed_db.py
mImwzfqeMh/tests/: test_api.py
